Fix #77: About overlap with post

--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -82,7 +82,7 @@ main {
     }
     @media screen and (min-width: $mobileW + 1) {
       position: fixed;
-      max-width: 285px;
+      max-width: 280px;
     }
     min-width: $leftWidth;
     justify-content: center;
